@@ -1,3 +1,13 @@
+2008-11-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/speller.c, src/speller.h, src/gui.c:
+   Check the Scintilla lexing style for the word to check and
+   skip any further checks if the word is not a comment, string
+   or has any other style which belongs to the filetype language of
+   the current document. This makes the whole plugin much more useful,
+   eliminates many false positives and increases speed a lot.
+
+
 2008-10-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/speller.c, src/speller.h, src/scplugin.c:
